--- a/week5/5.1/ABetterForm.html
+++ b/week5/5.1/ABetterForm.html
@@ -1,12 +1,12 @@
-<form action="" method="POST">
+<form action="https://formspree.io/f/mjvlpzoo" method="POST">
     <label for="name">Name:</label>
     <input type="text" name="name" id="name" placeholder="Full Name" required />
   
     <label for="email">Email:</label>
     <input type="email" name="email" id="email" placeholder="you@somewhere.com" />
   
-    <label for="fone">Phone:</label>
-    <input type="tel" name="fone" id="fone" placeholder="555-555-5555" />
+    <label for="phone">Phone:</label>
+    <input type="tel" name="phone" id="phone" placeholder="555-555-5555" />
   
     <div>
       <label for="msg">Enter your message:</label>
